@@ -122,7 +122,6 @@ static struct cmdtab mged_cmdtab[] = {
     {"debugbu", cmd_ged_plain_wrapper, ged_debugbu},
     {"debugdir", cmd_ged_plain_wrapper, ged_debugdir},
     {"debuglib", cmd_ged_plain_wrapper, ged_debuglib},
-    {"debugmem", cmd_ged_plain_wrapper, ged_debugmem},
     {"debugnmg", cmd_ged_plain_wrapper, ged_debugnmg},
     {"decompose", cmd_ged_plain_wrapper, ged_decompose},
     {"delay", cmd_ged_plain_wrapper, ged_delay},
@@ -217,7 +216,6 @@ static struct cmdtab mged_cmdtab[] = {
     {"match", cmd_ged_plain_wrapper, ged_match},
     {"mater", cmd_ged_plain_wrapper, ged_mater},
     {"matpick", f_matpick, GED_FUNC_PTR_NULL},
-    {"memprint", f_memprint, GED_FUNC_PTR_NULL},
     {"mged_update", f_update, GED_FUNC_PTR_NULL},
     {"mged_wait", f_wait, GED_FUNC_PTR_NULL},
     {"mirface", f_mirface, GED_FUNC_PTR_NULL},
